<resources>
    <string name="app_name">Sudoku</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="sudoku_game">SUDOKU GAME</string>
    <string name="start">Start</string>
    <string name="exit">Exit</string>
    <string name="back">Back</string>
    <string name="solve">Solve</string>
    <string name="clear">Clear</string>
    <string name="resume">Resume</string>
</resources>
