<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.ActivityPlay">
    <com.example.sudoku.view.custom.SudokuBoardView
                android:id="@+id/BoardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/padNumberLayout"
    />

    <GridLayout
                android:id="@+id/padNumberLayout"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:columnCount="4"
                android:rowCount="3"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true">

        <Button
                android:text="@string/_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button_one"
                android:layout_column="0"
                android:layout_row="0"/>
        <Button
                android:text="@string/_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button_two"
                android:layout_column="1"
                android:layout_row="0"/>
        <Button
                android:text="@string/_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button_three"
                android:layout_column="2"
                android:layout_row="0"/>
        <Button
                android:text="@string/_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button_four"
                android:layout_column="0"
                android:layout_row="1"/>
        <Button
                android:text="@string/_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button_five"
                android:layout_column="1"
                android:layout_row="1"/>
        <Button
                android:text="@string/_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button_six"
                android:layout_column="2"
                android:layout_row="1"/>
        <Button
                android:text="@string/_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button_seven"
                android:layout_column="0"
                android:layout_row="2"/>
        <Button
                android:text="@string/_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button_eight"
                android:layout_column="1"
                android:layout_row="2"/>
        <Button
                android:text="@string/_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button_nine"
                android:layout_column="2"
                android:layout_row="2"/>

        <Button
                android:text="@string/solve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnSolve"
                android:layout_column="3"
                android:layout_row="0"/>

        <Button
                android:text="@string/clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btnClear"
                android:layout_column="3"
                android:layout_row="1"/>
        <Button
                android:text="@string/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btnBack"
                android:layout_column="3"
                android:layout_row="2"/>

    </GridLayout>

</RelativeLayout>