<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.MainActivity">



        <GridLayout android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:columnCount="1"
                    android:rowCount="4"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true">


            <TextView
                    android:text="@string/sudoku_game"
                    android:textSize="30sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/txtTitle"
                    android:layout_gravity="center"
                    android:layout_column="0"
                    android:layout_row="0"/>

            <Button
                    android:text="@string/resume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/btnResume"
                    android:layout_gravity="center"
                    android:layout_column="0"
                    android:layout_row="1" android:visibility="invisible"/>

            <Button
                    android:text="@string/start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/btnStart"
                    android:layout_gravity="center"
                    android:layout_column="0"
                    android:layout_row="2"/>
            <Button
                    android:text="@string/exit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/btnExit"
                    android:layout_gravity="center"
                    android:layout_column="0"
                    android:layout_row="3"/>
        </GridLayout>
</RelativeLayout>